--- a/inicio.html
+++ b/inicio.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="icon" href="archivos\_dbc78604-2451-4a69-b447-c4140fdfecb9-removebg-preview (1).png" type="image/x-icon">
+    <link rel="icon" href="" type="image/x-icon">
 
     <title>M & F</title>
 </head>
