--- a/inicio.html
+++ b/inicio.html
@@ -38,7 +38,7 @@
     <div id="contenido" style="visibility: hidden;">
         <nav class="navbar bg-body-tertiary">
             <form class="container-fluid justify-content-center d-flex">
-              <img src="archivos\_dbc78604-2451-4a69-b447-c4140fdfecb9-removebg-preview (1).png" style="height: 90px; ;">
+              <img src="archivos\WhatsApp Image 2024-01-09 at 2.21.09 PM (4).jpeg" style="height: 90px; ;">
               <a class="btn btn-outline-success me-2" href="inicio.html">Inicio</a>
               <a class="btn btn-outline-success me-2" href="galeria.html">Galeria</a>
               <a class="btn btn-outline-success me-2" href="calendario.html">Calendario</a>
