--- a/inicio.html
+++ b/inicio.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="icon" href="archivos\WhatsApp Image 2024-01-09 at 2.21.09 PM (4).jpeg" type="image/x-icon">
+    <link rel="icon" href="https://i.postimg.cc/cHy8jTNq/dbc78604-2451-4a69-b447-c4140fdfecb9-removebg-preview-1.png" type="image/x-icon">
 
     <title>M & F</title>
 </head>
@@ -38,7 +38,7 @@
     <div id="contenido" style="visibility: hidden;">
         <nav class="navbar bg-body-tertiary">
             <form class="container-fluid justify-content-center d-flex">
-              <img src="archivos\WhatsApp Image 2024-01-09 at 2.21.09 PM (4).jpeg" style="height: 90px; ;">
+              <img src="https://i.postimg.cc/cHy8jTNq/dbc78604-2451-4a69-b447-c4140fdfecb9-removebg-preview-1.png" style="height: 90px; ;">
               <a class="btn btn-outline-success me-2" href="inicio.html">Inicio</a>
               <a class="btn btn-outline-success me-2" href="galeria.html">Galeria</a>
               <a class="btn btn-outline-success me-2" href="calendario.html">Calendario</a>
