--- a/inicio.html
+++ b/inicio.html
@@ -22,7 +22,7 @@
 
     <div id="pregunta-container">
         <section id="pregunta">
-            <h2>Pregunta De Validación 🤓 </h2>
+            <h2> Pregunta de Identificación 🤓 </h2>
             <p>¿Cuál es nuestro día de cumple mes?</p>
             <div id="respuestas">
                 <button class="respuesta-btn" data-respuesta="2">2</button>
